# from-scratch-inference-engine-

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/harness/: bench_cuda.cpp  bench_engine.py  compare_baselines.py
bindings/: module.cpp
docs/adr/: 0001-cpp-python-split.md  0002-test-frameworks.md  0003-dependency-boundary.md  0004-cuda-kernel-architecture.md  README.md  template.md
include/engine/: block_allocator.hpp  block_manager.hpp  dtype.hpp  engine.hpp  kv_cache.hpp  model.hpp  model_config.hpp  nn.hpp  ops.hpp  paged_kv_cache.hpp  quant.hpp  safetensors.hpp  sampler.hpp  speculative.hpp  tensor.hpp  tensor_parallel.hpp  version.hpp
include/engine/cuda/: block_manager.hpp  device.hpp  engine.hpp  kernels.hpp  kv_cache.hpp  model.hpp
python/engine/: __init__.py  chat.py  llm.py  server.py  tokenizer.py
scripts/: check_authorship.sh  fetch_model.py  install_hooks.sh
src/core/: dtype.cpp  matmul.cpp  version.cpp
src/cuda/: block_manager.cu  device.cu  engine.cu  kv_cache.cu  model.cu
src/engine/: engine.cpp  speculative.cpp  tensor_parallel.cpp
src/kvcache/: block_manager.cpp  paged_kv_cache.cpp
src/model/: model.cpp  model_config.cpp  nn.cpp  safetensors.cpp
src/quant/: quant.cpp
src/sampler/: sampler.cpp
tests/cpp/: CMakeLists.txt  test_block_allocator.cpp  test_block_manager.cpp  test_continuous_batch.cpp  test_cuda_block_manager.cpp  test_cuda_engine.cpp  test_cuda_kernels.cpp  test_cuda_model.cpp  test_cuda_smoke.cpp  test_engine.cpp  test_kv_cache.cpp  test_nn.cpp  test_paged_attention.cpp  test_quant.cpp  test_safetensors.cpp  test_sampler.cpp  test_speculative.cpp  test_tensor.cpp  test_tensor_parallel.cpp  test_version.cpp  tiny_model.hpp
tests/python/: test_benchmark.py  test_ext.py  test_forward.py  test_generate.py  test_matmul.py  test_parity.py  test_server.py  test_smoke.py  test_tokenizer.py
