[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "engine"
version = "0.0.1"
description = "From-scratch LLM inference engine: C++20/CUDA core with a Python frontend"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Akmal Khujdarov", email = "hujdarovakmal@gmail.com" }]
dependencies = [
    "numpy",
    "tokenizers",
    "safetensors",
]

[project.optional-dependencies]
serve = ["fastapi", "uvicorn"]
dev = ["pytest>=8", "ruff>=0.6", "huggingface_hub>=0.24"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.24"
cmake.build-type = "Release"
wheel.packages = ["python/engine"]
editable.mode = "redirect"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
ENGINE_BUILD_TESTS = "OFF"

[[tool.scikit-build.overrides]]
if.env.ENGINE_ENABLE_CUDA = true
cmake.define.ENGINE_ENABLE_CUDA = "ON"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["engine"]
